# BuidlHack_Quaile

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  rust-toolchain.toml
.next/: trace  trace-build
circuits/: eligibility.circom  input_example.json  input_fail.json
circuits/scripts/: setup.sh
contracts/attestation-verifier/: Cargo.toml
contracts/attestation-verifier/src/: crypto.rs  errors.rs  lib.rs
contracts/attestation-verifier/tests/: unit.rs
contracts/ido-escrow/: Cargo.toml
contracts/ido-escrow/src/: claim.rs  events.rs  external.rs  lib.rs  refund.rs  settlement.rs  state.rs  subscription.rs
contracts/ido-escrow/tests/: unit.rs
contracts/mock-ft/: Cargo.toml
contracts/mock-ft/src/: lib.rs
contracts/mock-ft/tests/: unit.rs
contracts/policy-registry/: Cargo.toml
contracts/policy-registry/src/: errors.rs  events.rs  lib.rs
contracts/policy-registry/tests/: unit.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
contracts/zk-verifier/tests/: unit.rs
docs/: evaluation_logic.md
docs/superpowers/plans/: 2026-04-15-zk-eligibility-migration.md
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/public/zk/: eligibility.wasm  eligibility_final.zkey
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/[slug]/: page.tsx
frontend/src/app/admin/[slug]/criteria/: page.tsx
frontend/src/app/admin/new/: page.tsx
frontend/src/app/api/auth/github/: route.ts
frontend/src/app/api/auth/github/callback/: route.ts
frontend/src/app/api/auth/github/token/: route.ts
frontend/src/app/company/: layout.tsx  page.tsx
frontend/src/app/company/criteria/: page.tsx
frontend/src/app/company/policies/: page.tsx
frontend/src/app/company/policies/[id]/: page.tsx
frontend/src/app/company/policies/new/: page.tsx
frontend/src/app/projects/[slug]/: page.tsx
frontend/src/app/projects/[slug]/identity/: page.tsx
frontend/src/components/: AddCriteriaModal.tsx  CompanyHeader.tsx  CompanyPolicyCard.tsx  ConnectedWallet.tsx  ContributeButton.tsx  FilterTabs.tsx  Header.tsx  IdentityModal.tsx  PersonaForm.tsx  ProjectCard.tsx  ProjectHero.tsx  StatusBadge.tsx  StatusStepper.tsx  SubscribeButton.tsx  SubscribingSidebar.tsx
frontend/src/contexts/: IdentityContext.tsx  WalletContext.tsx
frontend/src/lib/: attestation-store.ts  criteria.ts  slug.ts
frontend/src/lib/evm/: connect.ts  message.ts  web3modal.ts
frontend/src/lib/mock/: policies.ts
frontend/src/lib/near/: config.ts  contracts.ts  rpc.ts  sign.ts  transactions.ts  wallet-selector.ts
frontend/src/lib/tee/: attest.ts  bundle.ts
frontend/src/lib/zk/: prove.ts
frontend/src/types/: index.ts  snarkjs.d.ts
planning/: ERD.md  INVESTOR_FLOW.md  ONE_PAGER.md  PRD.md  PROJECT_INTRO.md  README.md  STATE.md  TEST_PLAN.md
planning/fixes/: ingest-02-fix.md  tee-json-wire-format-fix.md  tee-report-wrapper-fix.md
planning/research/: near-ai-tee-notes.md
planning/reviews/: iteration-1.md  iteration-2.md  iteration-3.md  iteration-4.md
planning/tasks/: README.md  contract-01-policy-registry.md  contract-02-attestation-verifier.md  contract-03-ido-escrow.md  contract-03a-escrow-state.md  contract-03b-escrow-settlement.md  contract-03c-escrow-claim-refund.md  contract-04-mock-ft.md  fe-01-contract-rpc.md  fe-02-persona-submission.md  fe-03-zk-proof-browser.md  fe-04-contribute-flow.md  fe-05-company-contract.md  infra-01-monorepo-init.md  infra-02-testnet-deploy.md  ingest-01-near-rpc.md  ingest-02-evm-multichain.md  ingest-03-github.md  tee-01-persona-schema.md  tee-02-inference-service.md  tee-02-near-ai-integration.md  tee-03-ownership-verification.md  tee-04-llm-judge.md  tee-05-signer-and-report.md  tee-06-key-bootstrap.md  test-01-e2e-demo.md  test-02-cross-lang-borsh.md  zk-01-circom-circuit.md  zk-02-shared-criteria-types.md  zk-03-contracts-schema-propagation.md  zk-04-zk-verifier-contract.md  zk-05-escrow-zk-integration.md  zk-06-tee-python-criteria.md  zk-07-tee-zk-input-response.md  zk-08-golden-vectors.md  zk-09-integration-build.md
scripts/: build_all.sh
scripts/demo/: mock_llm.py  tee_viewer.py
scripts/deploy/: advance_policies.py  config.env  config.env.example  create_subaccounts.sh  deploy_all.sh  register_mock_policies.py  verify_deployment.sh
scripts/e2e/: 05_submit_persona.py  06_contribute.sh  run_demo.sh
scripts/tee/: README.md  bootstrap_signer.sh  gen_signer_key.py
tee/inference/: Dockerfile  docker-compose.yml  pyproject.toml
tee/inference/src/: attestation_verifier.py  canonical.py  config.py  criteria_parser.py  crypto.py  main.py  nearai_client.py  ownership.py  pipeline.py  schemas.py
tee/inference/src/ingest/: __init__.py  chains.py  evm.py  github.py  near.py  near_schema.py
tee/inference/tests/: test_canonical.py  test_criteria_parser.py  test_evm_ingest.py  test_github_ingest.py  test_near_ingest.py  test_ownership.py  test_pipeline.py
tee/inference/tests/fixtures/: evm_sample.json  near_sample.json  sample_persona.json
tee/shared/: Cargo.toml
tee/shared/src/: attestation.rs  canonical.rs  contribution.rs  criteria.rs  lib.rs  persona.rs  policy.rs  rules.rs  signal.rs
tee/shared/tests/: roundtrip.rs
tests/integration/: Cargo.toml
tests/integration/src/: helpers.rs
tests/integration/tests/: test_escrow_contribute.rs  test_escrow_settle_claim_refund.rs  test_policy_registry.rs
