[workspace]
resolver = "2"
# Members are added incrementally as each task crate is created:
#   tee-01  → tee/shared
#   contract-01 → contracts/policy-registry
#   contract-02 → contracts/attestation-verifier
#   contract-03 → contracts/ido-escrow
members = [
    "tee/shared",
    # contract-01 → contracts/policy-registry       (added in task/contract-01)
    # contract-02 → contracts/attestation-verifier  (added in task/contract-02)
    # contract-03 → contracts/ido-escrow            (added in task/contract-03a)
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.78"

[workspace.dependencies]
near-sdk = "5.3"
near-contract-standards = "5.3"
borsh = { version = "1.5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha3 = "0.10"
primitive-types = { version = "0.12", default-features = false }
