[workspace]
resolver = "2"
# Members are added incrementally as each task crate is created:
#   tee-01  → tee/shared
#   contract-01 → contracts/policy-registry
#   contract-02 → contracts/attestation-verifier
#   contract-03 → contracts/ido-escrow
members = [
    "tee/shared",
    "contracts/policy-registry",
    "contracts/attestation-verifier",
    "contracts/ido-escrow",
    "contracts/mock-ft",
    # "tests/integration",  # Requires Rust 1.82+ (near-gas 0.3.5 uses edition2024)
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.78"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"
debug = false
panic = "abort"
overflow-checks = true

[workspace.dependencies]
near-sdk = { version = "=5.3.0", features = ["unstable", "legacy"] }
near-contract-standards = "=5.3.0"
borsh = { version = "1.5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha3 = "0.10"
primitive-types = { version = "0.12", default-features = false }
near-workspaces = "0.14"
near-gas = "=0.2.5"
tokio = { version = "1", features = ["full"] }
