[package]
name = "ido-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
tee-shared = { path = "../../tee/shared", default-features = false, features = ["contract"] }
primitive-types = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
